# hassio_agur_integration

./: .coveragerc  .gitignore  .pre-commit-config.yaml  GitVersion.yml  LICENSE  README.en.md  README.md  devbox.json  docker-compose.yml  hacs.json  mise.toml  pyproject.toml  taskfile.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  pytest.yml  validate.yml
custom_components/eau_agur/: __init__.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/eau_agur/api/: __init__.py  agur_api_client.py  const.py  consts.py  exceptions.py
custom_components/eau_agur/translations/: en.json  fr.json
hassio_dev/: configuration.yaml
tests/: __init__.py
tests/api/: test_agur_api_client.py
