[tool.poetry]
name = "eau_agur"
version = "0.0.3"
description = "EAU par Agur integration for Home Assistant"
authors = ["Pierre-Emmanuel Mercier <acesyde@gmail.com>"]
license = "MIT"
keywords = ["homeassistant", "hassio", "eau", "agur", "water"]
readme = "README.md"
repository = "https://github.com/acesyde/hassio_agur_integration"

[tool.poetry.dependencies]
python = "^3.10"
colorlog = "^6.7.0"
homeassistant = "^2023.1.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
yarl = "^1.9.2"

[tool.poetry.group.dev.dependencies]
asynctest = "^0.13.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-socket = "^0.6.0"
ruff = "^0.0.286"
pre-commit = "^3.3.3"
aresponses = "^2.1.6"
vulture = "^2.9.1"

[virtualenvs]
create = true
in-project = true

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".venv"
]

[tool.pytest.ini_options]
addopts = "-rxf -x -v -l --cov=./ --cov-report=xml"
testpaths = [
    "tests"
]

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]
verbose = true
