[project]
name = "eau_agur"
version = "0.1.0"
description = "EAU par Agur integration for Home Assistant"
authors = [{ name = "Pierre-Emmanuel Mercier", email = "acesyde@gmail.com" }]
requires-python = ">=3.13.2,<4.0"
license = "MIT"
keywords = ["homeassistant", "hassio", "eau", "agur", "water"]
readme = "README.md"
repository = "https://github.com/acesyde/hassio_agur_integration"
dependencies = [
  "colorlog >= 6.10.1",
  "homeassistant >= 2025.9.4",
  "requests >= 2.32.5",
  "aiohttp >= 3.12.15",
  "yarl >= 1.20.1",
  "async-timeout >= 5.0.1",
]

[dependency-groups]
dev = [
  "pytest >= 8.4.2",
  "pytest-cov >= 7.0.0",
  "pytest-socket >= 0.7.0",
  "ruff >= 0.14.3",
  "aresponses >= 3.0.0",
  "vulture >= 2.14",
]

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
  ".venv",
  ".codeclimate.yml",
  ".codecov.yml",
  ".coveragerc",
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  ".pre-commit-config.yaml",
  "venv",
  "mise.toml",
  "mise.lock",
]

[tool.pytest.ini_options]
addopts = "-rxf -x -v -l --cov=./ --cov-report=xml"
pythonpath = ["custom_components/eau_agur"]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle
  "F",     # pyflakes
  "I",     # isort
  "C90",   # mccabe
  "N",     # pep8-naming
  "G",     # flake8-logging-format
  "S",     # flake8-bandit
  "ASYNC", # flake8-async,
  "PL",    # pylint
]
ignore = [
  "G004",    # logging-fstring-interpolation
  "E501",    # line-too-long
  "RET505",  # no-else-return
  "RET507",  # no-else-continue
  "UP032",   # f-string
  "BLE001",  # broad-exception-caught
  "PLR2004", # magic-value-comparison
  "S101",    # assert
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 10
max-returns = 10

[tool.coverage.run]
source = ["src"]
omit = ["**/tests/**", "**/__init__.py", "**/__main__.py"]

[tool.vulture]
min_confidence = 80
paths = ["custom_components", "tests"]
verbose = true
